Agrego header, falta cositas

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,13 +1,16 @@
+/*
 .navbar {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* position: fixed; */
+  /* position: fixed; 
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
   height: 70px;
 }
+*/
+/*
 
 .navbar-container {
   max-width: 1200px;
@@ -75,3 +78,4 @@
   background-color: #2563eb;
   color: white;
 }
+*/
