--- a/src/components/footer/FooterSimple.module.css
+++ b/src/components/footer/FooterSimple.module.css
@@ -1,41 +1,34 @@
 .footer {
-  border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+  background-color: #f7f7f7;
+  border-top: 1px solid #e0e0e0;
+  padding: 1rem 0;
 }
 
 .inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  @media (max-width: $mantine-breakpoint-xs) {
-    flex-direction: column;
-  }
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
-.links {
-  @media (max-width: $mantine-breakpoint-xs) {
-    margin-top: var(--mantine-spacing-md);
-  }
-}
-.link {
-  display: flex;
+.legal {
+  flex-wrap: wrap;
   align-items: center;
-  height: 100%;
-  padding-left: var(--mantine-spacing-md);
-  padding-right: var(--mantine-spacing-md);
+}
+
+.socials a {
+  font-size: 1.1rem;
+  color: #555;
   text-decoration: none;
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-weight: 500;
-  font-size: var(--mantine-font-size-sm);
+}
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    height: 42px;
-    width: 100%;
-  }
-
-  @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-  }
+.socials a:hover {
+  color: black;
 }
